# lab04

./: .appveyor.yml  .travis.yml  README.md  README.rst
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: solver.cpp
